language/tests/correct/objectoriented_oop152.txt
aList Getter
oo
+
test1
2025
nice

aList Getter
oo
-
test2
2025
nice

aList Getter
oo
*
test3
2025
nice

aList Getter
oo
/
test4
2025
nice

aList Getter
oo
%
test5
2025
nice

aList Getter
oo
<<
test6
2025
nice

aList Getter
oo
>>
test7
2025
nice

aList Getter
oo
&
test8
2025
nice

aList Getter
oo
|
test9
2025
nice

aList Getter
oo
^
test10
2025
nice

aList Getter
oo
**
test11
2025
nice

aList Getter
oo
=
test12
2025
nice

aList Getter
oo
!=
test13
2025
nice

aList Getter
oo
<=
test14
2025
nice

aList Getter
oo
>=
test15
2025
nice

======================================================================
oo
+
test1
2025
nice

oo
-
test2
2025
nice

oo
*
test3
2025
nice

oo
/
test4
2025
nice

oo
%
test5
2025
nice

oo
<<
test6
2025
nice

oo
>>
test7
2025
nice

oo
&
test8
2025
nice

oo
|
test9
2025
nice

oo
^
test10
2025
nice

oo
**
test11
2025
nice

oo
=
test12
2025
nice

oo
!=
test13
2025
nice

oo
<=
test14
2025
nice

oo
>=
test15
2025
nice

Pass Error
Error (R26) : Calling private method from outside the class: operator
End of test program!
